--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -580,7 +580,7 @@
           <span>
             <button
               type="button"
-              class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav active"
+              class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav"
             >
               <span class="btn-icon-wrapper">
                 <i class="fa fa-ellipsis-v fa-w-6"></i>
@@ -588,7 +588,7 @@
             </button>
           </span>
         </div>
-        <div class="app-header__content header-mobile-open">
+        <div class="app-header__content">
           <div class="app-header-right">
             <div class="header-btn-lg pr-0">
               <div class="widget-content p-0">
@@ -623,36 +623,24 @@
                           transform: translate3d(-180px, 44px, 0px);
                         "
                       >
-                        <button
-                          type="button"
-                          tabindex="0"
-                          class="dropdown-item"
-                        >
-                          User Account
-                        </button>
-                        <button
-                          type="button"
-                          tabindex="0"
-                          class="dropdown-item"
-                        >
-                          Settings
-                        </button>
-                        <h6 tabindex="-1" class="dropdown-header">Header</h6>
-                        <button
-                          type="button"
-                          tabindex="0"
-                          class="dropdown-item"
-                        >
-                          Actions
-                        </button>
-                        <div tabindex="-1" class="dropdown-divider"></div>
-                        <button
-                          type="button"
-                          tabindex="0"
-                          class="dropdown-item"
-                        >
-                          Dividers
-                        </button>
+                        <div class="card-body">
+                          <img
+                            width="60"
+                            src="assets/images/avatars/4.jpg"
+                            alt="Card image cap"
+                            class="rounded-circle"
+                          />
+                          <br />
+                          <br />
+                          <h5 class="card-title">John Doe</h5>
+                          <h6 class="card-subtitle">
+                            Professor
+                          </h6>
+                          <p>
+                            Email: ab12345@dal.ca<br />Phone: (123) 456 789<br />Courses:
+                            CSCI 1234, CSCI 5678
+                          </p>
+                        </div>
                       </div>
                     </div>
                   </div>
