Prof profile pop up works for all pages

--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -729,7 +729,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="jobs.html">
+                  <a href="jobs.html" target="_blank">
                     <i class="metismenu-icon pe-7s-file"></i>
                     View Jobs
                   </a>
