Added apply/shortlist button

--- a/src/screens/indivJobDet.html
+++ b/src/screens/indivJobDet.html
@@ -320,7 +320,9 @@ Use to display a list of jobs. -->
                       </tr>
                     </tbody>
                   </table>
-                  <div class="btn-group">Hello</div>
+                  </br>
+                  <button class="mt-1 mr-1 btn btn-success">Apply</button>
+                  <button class="mt-1 btn btn-secondary">Shortlist</button>
                 </div>
               </div>
             </div>
