update layout of profile page

--- a/src/screens/pprofile.html
+++ b/src/screens/pprofile.html
@@ -56,7 +56,8 @@
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div class="logo-src"></div>
+          <div><h5>DALTAMS</h5></div>
+          <div><h6>Job Dashboard</h6></div>
           <div class="header__pane ml-auto">
             <div>
               <button
@@ -230,6 +231,7 @@
           <div class="app-main__inner">
             <!-- This is the basic information tab by Su -->
             <div class="row">
+            	<div class="col-lg-6">
               <div class="main-card mb-3 card">
                 <div class="card-body">
                   <img
@@ -247,14 +249,12 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                   <p>Courses: CSCI 1234, CSCI 5678</p>
                 </div>
               </div>
-            </div>
-
-            <!-- This is the application by ZH-->
-            <div class="row">
-              <div class="main-card mb-3 card">
+          </div>
+          <div class="col-lg-6">
+          	<div class="main-card mb-3 card">
                 <div class="card-body">
                   <h5 class="card-title">Application</h5>
-                  <table class="mb-0 table table-hover table-responsive">
+                  <table class="mb-0 table table-hover">
                     <thead>
                       <tr>
                         <th>Job ID</th>
@@ -321,14 +321,21 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                   </table>
                 </div>
               </div>
+          </div>
+            </div>
+
+            <!-- This is the application by ZH-->
+            <div class="row">
+              
             </div>
 
             <!-- This is the interview by ZH-->
             <div class="row">
+            	<div class="col-lg-6">
               <div class="main-card mb-3 card">
                 <div class="card-body">
                   <h5 class="card-title">Interview</h5>
-                  <table class="mb-0 table table-hover table-responsive">
+                  <table class="mb-0 table table-hover">
                     <thead>
                       <tr>
                         <th>Job ID</th>
@@ -361,6 +368,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                   </table>
                 </div>
               </div>
+          </div>
             </div>
           </div>
         </div>
