--- a/src/screens/profile.html
+++ b/src/screens/profile.html
@@ -231,6 +231,7 @@
           <div class="app-main__inner">
             <!-- This is the basic information tab by Su -->
             <div class="row">
+              <div class="col-lg-6">
               <div class="main-card mb-3 card">
                 <div class="card-body">
                   <img
@@ -249,13 +250,11 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                 </div>
               </div>
             </div>
-
-            <!-- This is the saved job postings by ZH-->
-            <div class="row">
+          <div class="col-lg-6">
               <div class="main-card mb-3 card">
                 <div class="card-body">
                   <h5 class="card-title">Drafts</h5>
-                  <table class="mb-0 table table-hover table-responsive">
+                  <table class="mb-0 table table-hover ">
                     <thead>
                       <tr>
                         <th>Course ID</th>
@@ -296,10 +295,17 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                   </table>
                 </div>
               </div>
+          </div>
+            </div>
+
+            <!-- This is the saved job postings by ZH-->
+            <div class="row">
+              
             </div>
 
             <!-- This is the list of uploaded docs by ZH-->
             <div class="row">
+              <div class="col-lg-6">
               <div class="main-card mb-3 card">
                 <div class="card-body">
                   <h5 class="card-title">Documents Uploaded</h5>
@@ -330,9 +336,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                 </div>
               </div>
             </div>
-
-            <!-- This is the application by ZH-->
-            <div class="row">
+            <div class="col-lg-6">
               <div class="main-card mb-3 card">
                 <div class="card-body">
                   <h5 class="card-title">Application</h5>
@@ -404,13 +408,20 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                 </div>
               </div>
             </div>
+            </div>
+
+            <!-- This is the application by ZH-->
+            <div class="row">
+              
+            </div>
 
             <!-- This is the interview by ZH-->
             <div class="row">
+              <div class="col-lg-6">
               <div class="main-card mb-3 card">
                 <div class="card-body">
                   <h5 class="card-title">Interview</h5>
-                  <table class="mb-0 table table-hover table-responsive">
+                  <table class="mb-0 table table-hover">
                     <thead>
                       <tr>
                         <th>Job ID</th>
@@ -439,6 +450,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                 </div>
               </div>
             </div>
+          </div>
           </div>
         </div>
       </div>
