Changes on index.html

--- a/src/screens/index.html
+++ b/src/screens/index.html
@@ -51,34 +51,19 @@
         width="300"
         height="154"
       />
-      <h1 class="h3 mb-3 font-weight-normal">DalTAMS</h1>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input
-        type="email"
-        id="inputEmail"
-        class="form-control"
-        placeholder="NetID"
-        required=""
-        autofocus=""
-      />
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input
-        type="password"
-        id="inputPassword"
-        class="form-control"
-        placeholder="Password"
-        required=""
-      />
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me" /> Remember me
-        </label>
-      </div>
-      <a class="btn btn-lg btn-primary btn-block" href="Prof.html">
-        Sign in
-      </a>
-      <a class="btn btn-lg btn-primary btn-block" href="jobs.html">
-        Register
+      <h1 class="h1 mb-3 font-weight-normal">DalTAMS</h1>
+      <h3 class="h3 mb-3 font-weight-normal">Select your user type</h3>
+      <button type="button" class="btn btn-lg btn-primary btn-block" href="">
+        Student
+      </button>
+      <button type="button" class="btn btn-lg btn-primary btn-block" href="">
+        TA
+      </button>
+      <button type="button" class="btn btn-lg btn-primary btn-block" href="">
+        Professor
+      </button>
+      <button type="button" class="btn btn-lg btn-primary btn-block" href="">
+        Office
       </button>
     </form>
     <script>
