--- a/src/screens/index.html
+++ b/src/screens/index.html
@@ -39,6 +39,25 @@
         padding: 15px;
         margin: 0 auto;
       }
+      body {
+        height: 100%;
+        display: -ms-flexbox;
+        display: -webkit-box;
+        display: flex;
+        -ms-flex-align: center;
+        -ms-flex-pack: center;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        justify-content: center;
+        padding-bottom: 40px;
+      }
+      html {
+        line-height: 1.15;
+        -webkit-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
+        -ms-overflow-style: scrollbar;
+      }
     </style>
   </head>
 
