--- a/src/screens/login.html
+++ b/src/screens/login.html
@@ -39,6 +39,29 @@
         padding: 15px;
         margin: 0 auto;
       }
+      body {
+        height: 100%;
+        display: -ms-flexbox;
+        display: -webkit-box;
+        display: flex;
+        -ms-flex-align: center;
+        -ms-flex-pack: center;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        justify-content: center;
+        padding-bottom: 40px;
+      }
+      html, body {
+        margin: 0;
+        height: 100%;
+      }
+      .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+
     </style>
   </head>
 
