--- a/src/screens/jobs.html
+++ b/src/screens/jobs.html
@@ -261,7 +261,9 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row"><a href="">99999</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99999</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -280,7 +282,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99998</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99998</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -299,7 +303,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99997</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99997</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -318,7 +324,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99996</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99996</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -335,7 +343,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99995</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99995</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -414,7 +424,9 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row"><a href="">99999</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99999</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -433,7 +445,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99998</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99998</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -452,7 +466,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99997</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99997</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -471,7 +487,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99996</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99996</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -488,7 +506,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99995</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99995</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -558,7 +578,9 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row"><a href="">99999</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99999</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -577,7 +599,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99998</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99998</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -596,7 +620,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99997</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99997</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -615,7 +641,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99996</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99996</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -632,7 +660,9 @@
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99995</a></th>
+                        <th scope="row">
+                          <a href="indivJobDet.html">99995</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
