--- a/src/screens/pJobs.html
+++ b/src/screens/pJobs.html
@@ -245,7 +245,9 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row"><a href="">99999</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99999</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -259,7 +261,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99998</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99998</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -273,7 +277,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99997</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99997</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -287,7 +293,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99996</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99996</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -301,7 +309,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99995</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99995</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -379,7 +389,9 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row"><a href="">99999</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99999</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -393,7 +405,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99998</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99998</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -407,7 +421,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99997</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99997</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -421,7 +437,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99996</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99996</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -435,7 +453,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99995</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99995</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -504,7 +524,9 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row"><a href="">99999</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99999</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -518,7 +540,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99998</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99998</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -532,7 +556,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99997</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99997</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -546,7 +572,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99996</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99996</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
@@ -560,7 +588,9 @@
                         <td>2077.02.31</td>
                       </tr>
                       <tr>
-                        <th scope="row"><a href="">99995</a></th>
+                        <th scope="row">
+                          <a href="pIndivJobDet.html">99995</a>
+                        </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
                         <td>
