--- a/src/screens/pJobs V2.html
+++ b/src/screens/pJobs V2.html
@@ -690,6 +690,47 @@
       </body>
       </html>
 
+
+      <div class="modal fade" id="searchBox" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" style="display: none;" aria-modal="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Search</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form class="">
+            <div class="position-relative form-group"><label for="jobIDSearch" class="">Job ID</label><input name="jobid" id="jobIDSearch" placeholder="Job ID" type="number" class="form-control"></div>
+            <div class="position-relative form-group"><label for="facultySelection" class="">Faculty</label><select name="facultyselect" id="facultySelection" class="form-control">
+              <option>-----Select One-----</option>
+              <option>Agriculture</option>
+              <option>Architecture and Planning</option>
+              <option>Arts and Social Sciences</option>
+              <option>College of Continuing Education</option>
+              <option>Computer Science</option>
+              <option>Dentistry</option>
+              <option>Engineeing</option>
+              <option>Graduate Studies</option>
+              <option>Health</option>
+              <option>Law</option>
+              <option>Management</option>
+              <option>Medicine</option>
+              <option>Science</option>
+            </select></div>
+
+            <div class="position-relative form-group"><label for="jobTitleSearch" class="">Job Title</label><input name="jobtitle" id="jobTitleSearch" placeholder="Job Title" class="form-control"></div>
+            <div class="position-relative form-group"><label for="jobDescriptionSearch" class="">Job Discription</label><input name="jobdescription" id="jobDescriptionSearch" placeholder="Job Description" class="form-control"></div>
+            <div class="position-relative form-group"><label for="jobRequirementSearch" class="">Job Requirement</label><input name="jobrequirement" id="jobRequirementSearch" placeholder="Job Requirement" class="form-control"></div>
+            <div class="position-relative form-group"><label for="additionInfoSearch" class="">Additional Info</label><textarea name="additioninfo" id="additionInfoSearch" class="form-control"></textarea></div>
+            <input class="mt-1 btn btn-primary" type="submit"></input>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
       <div class="modal fade bd-example-modal-lg" id="tagBox" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" style="display: none;" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
