Added the header title gap

--- a/src/screens/pJobs.html
+++ b/src/screens/pJobs.html
@@ -56,7 +56,7 @@
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div><h5>DALTAMS</h5></div>
+          <div class="mr-1"><h5>DALTAMS</h5></div>
           <div><h6>Job Dashboard (Prof View)</h6></div>
           <div class="header__pane ml-auto">
             <div>
