--- a/src/screens/TAcourses.html
+++ b/src/screens/TAcourses.html
@@ -16,8 +16,8 @@
     <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div><h5>DALTAMS</h5></div>
-		<div><h6>TA Dashboard</h6></div>
+          <div class="mr-1"><h5>DALTAMS</h5></div>
+	      	<div><h6>TA Dashboard</h6></div>
           <div class="header__pane ml-auto">
             <div>
               <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
