--- a/src/screens/pIndivJobDet.html
+++ b/src/screens/pIndivJobDet.html
@@ -57,7 +57,7 @@ Use to display a list of jobs. -->
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div><h5>DALTAMS</h5></div>
+          <div class="mr-1"><h5>DALTAMS</h5></div>
           <div><h6>Jobs Dashboard (Std View)</h6></div>
           <div class="header__pane ml-auto">
             <div>
