--- a/src/screens/pPostings.html
+++ b/src/screens/pPostings.html
@@ -545,7 +545,7 @@
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div><h5>DALTAMS</h5></div>
+          <div class="mr-1"><h5>DALTAMS</h5></div>
           <div><h6>Professor Dashboard</h6></div>
           <div class="header__pane ml-auto">
             <div>
