Changes file names

--- a/src/screens/jobsProfile.html
+++ b/src/screens/jobsProfile.html
@@ -56,7 +56,7 @@
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div><h5>DALTAMS</h5></div>
+          <div class="mr-1"><h5>DALTAMS</h5></div>
           <div><h6>Job Dashboard (Std View)</h6></div>
           <div class="header__pane ml-auto">
             <div>
@@ -185,7 +185,7 @@
                 </li>
 
                 <li>
-                  <a href="profile.html" class="mm-active">
+                  <a href="jobsProfile.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-user"></i>
                     My Profile
                   </a>
@@ -232,225 +232,221 @@
             <!-- This is the basic information tab by Su -->
             <div class="row">
               <div class="col-lg-6">
-              <div class="main-card mb-3 card">
-                <div class="card-body">
-                  <img
-                    width="60"
-                    src="assets/images/avatars/3.jpg"
-                    alt="Card image cap"
-                    class="rounded-circle"
-                  />
-                  <h5 class="card-title d-inline-block">Don Joe</h5>
-                  <br /><br />
-                  <pre>
+                <div class="main-card mb-3 card">
+                  <div class="card-body">
+                    <img
+                      width="60"
+                      src="assets/images/avatars/3.jpg"
+                      alt="Card image cap"
+                      class="rounded-circle"
+                    />
+                    <h5 class="card-title d-inline-block">Don Joe</h5>
+                    <br /><br />
+                    <pre>
 B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
-                  >
-                  <p>Documents: <a>3 Cover Letters </a>, <a>Resume</a></p>
-                  <p>Courses: CSCI 1234, CSCI 5678</p>
+                    >
+                    <p>Documents: <a>3 Cover Letters </a>, <a>Resume</a></p>
+                    <p>Courses: CSCI 1234, CSCI 5678</p>
+                  </div>
                 </div>
               </div>
-            </div>
-          <div class="col-lg-6">
-              <div class="main-card mb-3 card">
-                <div class="card-body">
-                  <h5 class="card-title">Drafts</h5>
-                  <table class="mb-0 table table-hover ">
-                    <thead>
-                      <tr>
-                        <th>Course ID</th>
-                        <th>Course Details</th>
-                        <th>Date created</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">
-                          <a href="indivJobDet.html">CSCI 1120</a>
-                        </th>
-                        <td>Detail Information</td>
-                        <td>2077-02-31 12.00</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">
-                          <a href="indivJobDet.html">CSCI 1120</a>
-                        </th>
-                        <td>Detail Information</td>
-                        <td>2077-02-31 12.00</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">
-                          <a href="indivJobDet.html">CSCI 1120</a>
-                        </th>
-                        <td>Detail Information</td>
-                        <td>2077-02-31 12.00</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">
-                          <a href="indivJobDet.html">CSCI 1120</a>
-                        </th>
-                        <td>Detail Information</td>
-                        <td>2077-02-31 12.00</td>
-                      </tr>
-                    </tbody>
-                  </table>
+              <div class="col-lg-6">
+                <div class="main-card mb-3 card">
+                  <div class="card-body">
+                    <h5 class="card-title">Drafts</h5>
+                    <table class="mb-0 table table-hover">
+                      <thead>
+                        <tr>
+                          <th>Course ID</th>
+                          <th>Course Details</th>
+                          <th>Date created</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">
+                            <a href="indivJobDet.html">CSCI 1120</a>
+                          </th>
+                          <td>Detail Information</td>
+                          <td>2077-02-31 12.00</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">
+                            <a href="indivJobDet.html">CSCI 1120</a>
+                          </th>
+                          <td>Detail Information</td>
+                          <td>2077-02-31 12.00</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">
+                            <a href="indivJobDet.html">CSCI 1120</a>
+                          </th>
+                          <td>Detail Information</td>
+                          <td>2077-02-31 12.00</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">
+                            <a href="indivJobDet.html">CSCI 1120</a>
+                          </th>
+                          <td>Detail Information</td>
+                          <td>2077-02-31 12.00</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
-          </div>
             </div>
 
             <!-- This is the saved job postings by ZH-->
-            <div class="row">
-              
-            </div>
+            <div class="row"></div>
 
             <!-- This is the list of uploaded docs by ZH-->
             <div class="row">
               <div class="col-lg-6">
-              <div class="main-card mb-3 card">
-                <div class="card-body">
-                  <h5 class="card-title">Documents Uploaded</h5>
-                  <table class="mb-0 table table-hover">
-                    <thead>
-                      <tr>
-                        <th>Document Type</th>
-                        <th>File Number</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">Resume</th>
-                        <td>
-                          <a data-toggle="modal" href="#resumeModal">3</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">CV</th>
-                        <td><a data-toggle="modal" href="#CVModal">3</a></td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Cover Letter</th>
-                        <td><a data-toggle="modal" href="#CLModal">3</a></td>
-                      </tr>
-                    </tbody>
-                  </table>
+                <div class="main-card mb-3 card">
+                  <div class="card-body">
+                    <h5 class="card-title">Documents Uploaded</h5>
+                    <table class="mb-0 table table-hover">
+                      <thead>
+                        <tr>
+                          <th>Document Type</th>
+                          <th>File Number</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">Resume</th>
+                          <td>
+                            <a data-toggle="modal" href="#resumeModal">3</a>
+                          </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">CV</th>
+                          <td><a data-toggle="modal" href="#CVModal">3</a></td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Cover Letter</th>
+                          <td><a data-toggle="modal" href="#CLModal">3</a></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="main-card mb-3 card">
-                <div class="card-body">
-                  <h5 class="card-title">Application</h5>
-                  <table class="mb-0 table table-hover table-responsive">
-                    <thead>
-                      <tr>
-                        <th>Job ID</th>
-                        <th>Course ID</th>
-                        <th>Status</th>
-                        <th>Applied Date</th>
-                        <th>Files Upload</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">
-                          <a href="indivJobDet.html">99999</a>
-                        </th>
-                        <td>CSCI 1120</td>
-                        <td>
-                          <div class="mb-2 mr-2 badge badge-success">
-                            Offered
-                          </div>
-                        </td>
-                        <td>2077-02-31 12.00</td>
-                        <td>xxx.pdf</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">
-                          <a href="indivJobDet.html">99999</a>
-                        </th>
-                        <td>CSCI 1120</td>
-                        <td>
-                          <div class="mb-2 mr-2 badge badge-primary">
-                            Applied
-                          </div>
-                        </td>
-                        <td>2077-02-31 12.00</td>
-                        <td>xxx.pdf</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">
-                          <a href="indivJobDet.html">99999</a>
-                        </th>
-                        <td>CSCI 1120</td>
-                        <td>
-                          <div class="mb-2 mr-2 badge badge-danger">
-                            Rejected
-                          </div>
-                        </td>
-                        <td>2077-02-31 12.00</td>
-                        <td>xxx.pdf</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">
-                          <a href="indivJobDet.html">99999</a>
-                        </th>
-                        <td>CSCI 1120</td>
-                        <td>
-                          <div class="mb-2 mr-2 badge badge-info">
-                            Interview
-                          </div>
-                        </td>
-                        <td>2077-02-31 12.00</td>
-                        <td>xxx.pdf</td>
-                      </tr>
-                    </tbody>
-                  </table>
+              <div class="col-lg-6">
+                <div class="main-card mb-3 card">
+                  <div class="card-body">
+                    <h5 class="card-title">Application</h5>
+                    <table class="mb-0 table table-hover table-responsive">
+                      <thead>
+                        <tr>
+                          <th>Job ID</th>
+                          <th>Course ID</th>
+                          <th>Status</th>
+                          <th>Applied Date</th>
+                          <th>Files Upload</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">
+                            <a href="indivJobDet.html">99999</a>
+                          </th>
+                          <td>CSCI 1120</td>
+                          <td>
+                            <div class="mb-2 mr-2 badge badge-success">
+                              Offered
+                            </div>
+                          </td>
+                          <td>2077-02-31 12.00</td>
+                          <td>xxx.pdf</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">
+                            <a href="indivJobDet.html">99999</a>
+                          </th>
+                          <td>CSCI 1120</td>
+                          <td>
+                            <div class="mb-2 mr-2 badge badge-primary">
+                              Applied
+                            </div>
+                          </td>
+                          <td>2077-02-31 12.00</td>
+                          <td>xxx.pdf</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">
+                            <a href="indivJobDet.html">99999</a>
+                          </th>
+                          <td>CSCI 1120</td>
+                          <td>
+                            <div class="mb-2 mr-2 badge badge-danger">
+                              Rejected
+                            </div>
+                          </td>
+                          <td>2077-02-31 12.00</td>
+                          <td>xxx.pdf</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">
+                            <a href="indivJobDet.html">99999</a>
+                          </th>
+                          <td>CSCI 1120</td>
+                          <td>
+                            <div class="mb-2 mr-2 badge badge-info">
+                              Interview
+                            </div>
+                          </td>
+                          <td>2077-02-31 12.00</td>
+                          <td>xxx.pdf</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
-            </div>
             </div>
 
             <!-- This is the application by ZH-->
-            <div class="row">
-              
-            </div>
+            <div class="row"></div>
 
             <!-- This is the interview by ZH-->
             <div class="row">
               <div class="col-lg-6">
-              <div class="main-card mb-3 card">
-                <div class="card-body">
-                  <h5 class="card-title">Interview</h5>
-                  <table class="mb-0 table table-hover">
-                    <thead>
-                      <tr>
-                        <th>Job ID</th>
-                        <th>Course ID</th>
-                        <th>Date of Interview</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">99999</th>
-                        <td>CSCI 1120</td>
-                        <td>2077-02-31 12.00</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">99999</th>
-                        <td>CSCI 1120</td>
-                        <td>2077-02-31 12.00</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">99999</th>
-                        <td>CSCI 1120</td>
-                        <td>2077-02-31 12.00</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                <div class="main-card mb-3 card">
+                  <div class="card-body">
+                    <h5 class="card-title">Interview</h5>
+                    <table class="mb-0 table table-hover">
+                      <thead>
+                        <tr>
+                          <th>Job ID</th>
+                          <th>Course ID</th>
+                          <th>Date of Interview</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">99999</th>
+                          <td>CSCI 1120</td>
+                          <td>2077-02-31 12.00</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">99999</th>
+                          <td>CSCI 1120</td>
+                          <td>2077-02-31 12.00</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">99999</th>
+                          <td>CSCI 1120</td>
+                          <td>2077-02-31 12.00</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
           </div>
         </div>
       </div>
