--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -527,14 +527,14 @@
             <div class="app-sidebar__inner">
               <ul class="vertical-nav-menu metismenu">
                 <li>
-                  <a href="Prof.html" class="mm-active">
+                  <a href="prof.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-user"></i>
                     My Dashboard
                   </a>
                 </li>
 
                 <li>
-                  <a href="pcourses.html">
+                  <a href="pCourses.html">
                     <i class="metismenu-icon pe-7s-id"></i>
                     My Courses
                   </a>
@@ -552,7 +552,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="jobs.html" target="_blank">
+                  <a href="jobsP.html" target="_blank">
                     <i class="metismenu-icon pe-7s-file"></i>
                     View Jobs
                   </a>
@@ -662,7 +662,7 @@
                   class="card-body row align-items-center justify-content-between"
                 >
                   <h5 class="card-title">Current Courses</h5>
-                  <a class="btn mr-2 mb-2 btn-primary" href="pcourses.html">
+                  <a class="btn mr-2 mb-2 btn-primary" href="pCourses.html">
                     More
                   </a>
                   <div class="table-responsive">
@@ -864,7 +864,7 @@
     </script>
     <script
       type="text/javascript"
-      src="../scripts/scripts.pcourses.js"
+      src="../scripts/scripts.pCourses.js"
     ></script>
 
     <div class="jvectormap-tip"></div>
