--- a/src/screens/TAcourses.html
+++ b/src/screens/TAcourses.html
@@ -253,7 +253,7 @@
           </div>
       </div>
       <script type="text/javascript" src="./assets/scripts/main.js"></script>
-      <script type="text/javascript" src="../scripts/scripts.pcourses.js"></script>
+      <script type="text/javascript" src="../scripts/scripts.pCourses.js"></script>
        <!--Modal for Feedback Statistics-->
        <div
       class="modal fade"
