--- a/src/screens/indivJobDet.html
+++ b/src/screens/indivJobDet.html
@@ -186,7 +186,7 @@ Use to display a list of jobs. -->
                 </li>
 
                 <li>
-                  <a href="profile.html">
+                  <a href="jobsProfile.html">
                     <i class="metismenu-icon pe-7s-user"></i>
                     My profile
                   </a>
