--- a/src/screens/jobs.html
+++ b/src/screens/jobs.html
@@ -56,7 +56,7 @@
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div><h5>DALTAMS</h5></div>
+          <div class="mr-1"><h5>DALTAMS</h5></div>
           <div><h6>Job Dashboard (Std View)</h6></div>
           <div class="header__pane ml-auto">
             <div>
@@ -185,7 +185,7 @@
                 </li>
 
                 <li>
-                  <a href="profile.html">
+                  <a href="jobsProfile.html">
                     <i class="metismenu-icon pe-7s-user"></i>
                     My Profile
                   </a>
