--- a/src/screens/jobsP.html
+++ b/src/screens/jobsP.html
@@ -178,7 +178,7 @@
             <div class="app-sidebar__inner">
               <ul class="vertical-nav-menu metismenu">
                 <li>
-                  <a href="jobs.html" class="mm-active">
+                  <a href="jobsP.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-pendrive"></i>
                     Jobs
                   </a>
