--- a/src/screens/pIndivJobDet.html
+++ b/src/screens/pIndivJobDet.html
@@ -186,9 +186,9 @@ Use to display a list of jobs. -->
                 </li>
 
                 <li>
-                  <a href="profile.html">
+                  <a href="jobsProfile.html">
                     <i class="metismenu-icon pe-7s-user"></i>
-                    My profile
+                    My Profile
                   </a>
                 </li>
 
