--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -704,14 +704,14 @@
             <div class="app-sidebar__inner">
               <ul class="vertical-nav-menu metismenu">
                 <li>
-                  <a href="Prof.html">
+                  <a href="prof.html">
                     <i class="metismenu-icon pe-7s-user"></i>
                     My Dashboard
                   </a>
                 </li>
 
                 <li>
-                  <a href="pcourses.html" class="mm-active">
+                  <a href="pCourses.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-id"></i>
                     My Courses
                   </a>
@@ -729,7 +729,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="jobs.html" target="_blank">
+                  <a href="jobsP.html" target="_blank">
                     <i class="metismenu-icon pe-7s-file"></i>
                     View Jobs
                   </a>
@@ -2144,7 +2144,7 @@
     </script>
     <script
       type="text/javascript"
-      src="../scripts/scripts.pcourses.js"
+      src="../scripts/scripts.pCourses.js"
     ></script>
 
     <div class="jvectormap-tip"></div>
